# tpie

./: CMakeLists.txt
test/: CMakeLists.txt  sort.cpp
test/speed_regression/: CMakeLists.txt  fractile_serialization.cpp
test/unit/: CMakeLists.txt  test_pipelining.cpp  test_serialization.cpp
tpie/: CMakeLists.txt  config.h.cmake  file_base.h  file_stream_base.h  is_simple_iterator.h  job.h  memory.h  pipelining.h  progress_indicator_subindicator.h  serialization2.h  serialization_sort.h  serialization_stream.cpp  serialization_stream.h  sysinfo.h  unittest.h
tpie/pipelining/: CMakeLists.txt  factory_base.h  graph.cpp  graph.h  merge_sorter.h  node.h  pair_factory.h  pipe_segment.h  pipeline.h  serialization.h  tokens.h
